--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                                  <input type="checkbox" name="dropdown" id="dropdown">
                              <div class="dropdown-menu">
                                  <ul>
-                                    <li><a href="">about us</a></li>
-                                    <li><a href="">ourservices</a></li>
+                                    <li><a href="">About us</a></li>
+                                    <li><a href="">Services</a></li>
                                     <li><a href="">vehicles</a></li>
                                     <li><a href="">pricings</a></li>
                                     <li><a href="">cariers</a></li>
